[gd_scene load_steps=9 format=2]

[ext_resource path="res://Font/Lacquer-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprites/green_duck.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 52
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 107.0
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 480.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "Duck Factory
2!"
align = 1
valign = 1

[node name="GameOver" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 193.0
margin_right = 480.0
margin_bottom = 249.0
custom_fonts/font = SubResource( 2 )
text = "Game Over!"
align = 1
valign = 1

[node name="HiScore" type="Label" parent="VBoxContainer"]
visible = false
margin_top = 193.0
margin_right = 480.0
margin_bottom = 256.0
custom_fonts/font = SubResource( 3 )
text = "HiScore: 60000"
align = 1
valign = 1

[node name="Play" type="Button" parent="VBoxContainer"]
margin_top = 193.0
margin_right = 480.0
margin_bottom = 270.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play!"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
